--- a/openhab-container/openhab_conf/services/mqtt.cfg
+++ b/openhab-container/openhab_conf/services/mqtt.cfg
@@ -4,11 +4,13 @@
 #
 
 # URL to the MQTT broker, e.g. tcp://localhost:1883 or ssl://localhost:8883
-mqtt.url=tcp://localhost:1883
+mqtt.url=tcp://m11.cloudmqtt.com:16178
+mqtt.user=xjmbtxje
+mqtt.pwd=An_gxdx67pRs
 
 # Optional. Client id (max 23 chars) to use when connecting to the broker.
 # If not provided a random default is generated.
-mqtt.clientId=OH_core
+mqtt.clientId=OH_silets_core
 
 # Optional. True or false. If set to true, allows the use of clientId values
 # up to 65535 characters long. Defaults to false.
